--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,22 @@
 server:
-  port: 5002
+  port: 8080
 
 spring:
   config:
     import:
       - optional:file:env/jwt.env[.properties]
+      - optional:file:env/db.env[.properties]
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: ${DB_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+
+  jpa:
+    database: postgresql
+    hibernate:
+      ddl-auto: update
+    show-sql: true
 
   jackson:
     time-zone: Asia/Seoul
