--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
     import:
       - optional:file:env/jwt.env[.properties]
       - optional:file:env/db.env[.properties]
+      - optional:file:env/email.env[.properties]
   datasource:
     driver-class-name: org.postgresql.Driver
     url: ${DB_URL}
@@ -18,8 +19,26 @@ spring:
       ddl-auto: update
     show-sql: true
 
+  redis:
+    connection:
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
+
   jackson:
     time-zone: Asia/Seoul
+
+  mail:
+    host: ${MAIL_HOST}
+    port: ${MAIL_PORT}
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
 springdoc:
   default-consumes-media-type: application/json;charset=UTF-8
   default-produces-media-type: application/json;charset=UTF-8
