refactor(#25) :: application.yml
postgresql의 환경변수명을 수정합니다

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8082
 
 spring:
   config:
@@ -9,9 +9,9 @@ spring:
       - optional:file:env/email.env[.properties]
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: ${DB_URL}
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    url: ${POSTGRES_URL}
+    username: ${POSTGRES_USERNAME}
+    password: ${POSTGRES_PASSWORD}
 
   jpa:
     database: postgresql
